# telegram-news-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  plan.md  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: config.py  main.py
app/bot/: handlers.py  helpers.py
app/db/: models.py  repos.py  session.py
app/scrapers/: base.py  registry.py  rss.py
app/services/: delivery_service.py  scraper_service.py
